<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sure_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nyc.c4q.homework06.MainActivity">
    <TextView
        android:id="@+id/text_equation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/text_equation"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:freezesText="true"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"/>
    <LinearLayout>

        <Button
            android:id="@+id/open_parens"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/open_parens"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="("
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />

        <Button
            android:id="@+id/closed_parens"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/closed_parens"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag=")"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />


        <Button
            android:id="@+id/percent"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/percent"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:textAllCaps="false"
            android:tag="%"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />
        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="delete"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />

    </LinearLayout>
    <LinearLayout>
        <Button
            android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="7"
            android:padding="8dp"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />

        <Button
            android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:padding="8dp"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            android:tag="8"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="9"
            android:padding="8dp"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />
        <Button
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="/"
            android:padding="8dp"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"/>

    </LinearLayout>
    <LinearLayout>
        <Button
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="4"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"/>

        <Button

            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="5"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"/>

        <Button
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            android:tag="6"
            />
        <Button
            android:id="@+id/multiply"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="*"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"/>

    </LinearLayout>
    <LinearLayout>
        <Button
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="1"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />

        <Button

            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="2"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"/>

        <Button

            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="3"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />
        <Button
            android:id="@+id/subtract"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="-"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />

    </LinearLayout>
    <LinearLayout>
        <Button
            android:id="@+id/zero"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Zero"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="0"
            android:padding="8dp"
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />

        <Button

            android:id="@+id/decimal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="."
            android:textAllCaps="false"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />

        <Button
            android:id="@+id/equals"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="="
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />
        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="24sp"
            android:onClick="calculateEquation"
            android:tag="+"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/calculator_color"
            android:background="@drawable/mybutton"
            />


    </LinearLayout>
</TableLayout>